# lepidoptera

./: README.md  package.json  pnpm-lock.yaml
lepidoptera-app/src-tauri/: Cargo.toml
lepidoptera-app/src-tauri/attachment_store/: Cargo.toml
lepidoptera-app/src-tauri/attachment_store/src/: attachment_ports.rs  attachments_repository.rs  entities.rs  lib.rs
lepidoptera-app/src-tauri/attachment_store/src/attachments_manager/: create_attachment.rs  get_attachment_by_id.rs  manager.rs  mod.rs
lepidoptera-app/src-tauri/conversations/: Cargo.toml
lepidoptera-app/src-tauri/conversations/src/: conversation_ports.rs  lib.rs
lepidoptera-app/src-tauri/conversations/src/entities/: conversation.rs  message.rs  mod.rs  read_record.rs
lepidoptera-app/src-tauri/conversations/src/models/: conversation_result.rs  create_message_request.rs  message_result.rs  mod.rs
lepidoptera-app/src-tauri/conversations/src/schemas/: message_schemas.rs  mod.rs
lepidoptera-app/src-tauri/db/: Cargo.toml
lepidoptera-app/src-tauri/db/src/: connection_pool.rs  lib.rs  repository.rs  repository_base.rs
lepidoptera-app/src-tauri/db/src/migrations/: m0001_schema_version.rs  m0002_create_tickets.rs  m0003_add_ticket_columns.rs  m0004_create_projects.rs  m0005_create_persons.rs  m0006_drop_schema_version.rs  m0007_create_documents.rs  m0008_create_attachments.rs  m0009_add_document_indexes.rs  m0010_add_projects_is_active.rs  m0011_add_document_version_published_fields.rs  m0012_rename_tickets_to_work_items.rs  m0013_create_work_item_types.rs  m0014_add_work_items_type_id.rs  m0015_create_work_item_field_values.rs  m0016_create_project_settings.rs  m0017_create_work_item_number_ranges.rs  m0018_add_work_items_sequential_number.rs  m0019_create_local_machine.rs  m0020_change_sequential_number_to_text.rs  m0021_create_work_item_relationships.rs  m0022_add_work_item_types_name_display_name.rs  m0023_unique_sequence_prefix.rs  m0024_add_projects_created_by_updated_by.rs  m0025_create_conversations.rs  m0026_create_messages.rs  m0027_create_read_records.rs  m0028_create_tags.rs  m0029_create_tagged_items.rs  mod.rs
lepidoptera-app/src-tauri/documentation/: Cargo.toml
lepidoptera-app/src-tauri/documents/: Cargo.toml
lepidoptera-app/src-tauri/documents/src/: docuent_ports.rs  documents_sqlite_repository.rs  entities.rs  lib.rs
lepidoptera-app/src-tauri/documents/src/documents_manager/: get_document_tree.rs  manager.rs  mod.rs
lepidoptera-app/src-tauri/documents/src/entities/: document.rs  document_version.rs  mod.rs
lepidoptera-app/src-tauri/lepidoptera-app/: Cargo.toml  lepidoptera.db  tauri.conf.json
lepidoptera-app/src-tauri/lepidoptera-app/capabilities/: default.json
lepidoptera-app/src-tauri/lepidoptera-app/icons/: README.txt
lepidoptera-app/src-tauri/lepidoptera-app/icons/macos/: mac_icon.icns
lepidoptera-app/src-tauri/lepidoptera-app/src/: app_context.rs  lib.rs  main.rs
lepidoptera-app/src-tauri/lepidoptera-app/src/commands/: attachment_commands.rs  default_kanban_template.rs  file_commands.rs  logging.rs  mod.rs  navigation_commands.rs  person_commands.rs  project_commands.rs  project_template_commands.rs  ticket_commands.rs  window_commands.rs  work_item_commands.rs
lepidoptera-app/src-tauri/lepidoptera-app/src/settings/: app_config.rs  local_settings_store.rs  mod.rs  settings_store.rs
lepidoptera-app/src-tauri/people/: Cargo.toml
lepidoptera-app/src-tauri/people/src/: entities.rs  lib.rs  people_ports.rs  people_sqlite_repository.rs
lepidoptera-app/src-tauri/people/src/entities/: mod.rs  person.rs  team.rs  team_member.rs
lepidoptera-app/src-tauri/people/src/models/: mod.rs  team_result.rs
lepidoptera-app/src-tauri/people/src/people_manager/: create_person.rs  get_all_persons.rs  get_person_by_id.rs  manager.rs  mod.rs
lepidoptera-app/src-tauri/people/src/schemas/: mod.rs  team_schemas.rs
lepidoptera-app/src-tauri/projects/: Cargo.toml
lepidoptera-app/src-tauri/projects/src/: entities.rs  lib.rs  project_ports.rs  project_settings_sqlite_repository.rs  projects_sqlite_repository.rs
lepidoptera-app/src-tauri/projects/src/entities/: mod.rs  project.rs  project_member.rs  project_settings.rs
lepidoptera-app/src-tauri/projects/src/projects_manager/: manager.rs  (+8 more)
lepidoptera-app/src-tauri/search/: Cargo.toml
lepidoptera-app/src-tauri/search/src/: lib.rs
lepidoptera-app/src-tauri/shared/: Cargo.toml
lepidoptera-app/src-tauri/sync/: Cargo.toml
lepidoptera-app/src-tauri/sync/src/: lib.rs  local_machine_sqlite_repository.rs  sync_ports.rs
lepidoptera-app/src-tauri/tickets/: Cargo.toml
lepidoptera-app/src-tauri/tickets/src/: entities.rs  lib.rs  repository.rs  tickets_port.rs  tickets_sqlite_repository.rs  work_items_port.rs  work_items_sqlite_repository.rs
lepidoptera-app/src-tauri/users/: Cargo.toml
lepidoptera-app/src-tauri/work_items/: Cargo.toml
lepidoptera-app/src-tauri/work_items/src/: errors.rs  lib.rs  repository.rs  work_item_number_ranges_repository.rs  work_item_relationships_repository.rs  work_item_relationships_sqlite_repository.rs  work_item_types_repository.rs  work_item_types_sqlite_repository.rs  work_items_port.rs  work_items_sqlite_repository.rs
(+177 files in other folders)
