[package]
name = "documents"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
db = { path = "../db" }

[lints.rust]
unused_variables = "allow"
dead_code = "allow"
