[package]
name = "lepidoptera-app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "lepidoptera_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
db = { path = "../db" }
shared = { path = "../shared" }
tickets = { path = "../tickets" }
