[package]
name = "lepidoptera-app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "lepidoptera_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = {workspace = true}
ulid = {workspace = true}
db = { path = "../db" }
shared = { path = "../shared" }
work_items = { path = "../work_items" }
projects = {path = "../projects"}
documents = {path = "../documents" }
sync = { path = "../sync" }
attachment_store = { path = "../attachment_store" }
people = { path = "../people" }

[lints.rust]
unused_variables = "allow"
dead_code = "allow"
