[package]
name = "sync"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
ulid = {workspace = true}
db = { path = "../db" }
machine_uuid = "0.1"
hostname = "0.4"

[lints.rust]
unused_variables = "allow"
dead_code = "allow"
